<resources>
    <string name="app_name">Twigs</string>
    <string name="app_name_short">Twigs</string>
    <string name="prompt_transaction_title">Title</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="prompt_transaction_description">Description</string>
    <string name="prompt_transaction_date">Date</string>
    <string name="prompt_transaction_amount">Amount</string>
    <string name="type_expense">Expense</string>
    <string name="type_income">Income</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="label_current_balance">Current Balance</string>
    <string name="overview_no_data">&#x1F4C8;\nAdd some transactions to see an overview of your spending here</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="categories_no_data">&#x1F333;\nGet to work! Money doesn\'t grow on trees after all</string>
    <string name="transactions_no_data">&#x1F914;\nAre you sure you haven\'t spent any money?</string>
    <string name="title_categories">Categories</string>
    <string name="title_edit_category">Edit Category</string>
    <string name="prompt_category_amount">Amount</string>
    <string name="prompt_category_name">Name</string>
    <string name="prompt_category_description">Description</string>
    <string name="title_add_category">Add Category</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="prompt_transaction_category">Category</string>
    <string name="required_field_name">Name is a required field</string>
    <string name="required_field_amount">Amount is a required field</string>
    <string name="title_transactions">Transactions</string>
    <string name="balance_remaning">\$%1$.02f remaining</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_submit">Submit</string>
    <string name="error_required_field">This is a required field</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_profile">Profile</string>
    <string name="info_login">Login to manage your budget</string>
    <string name="action_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_forgot_password">Forgot password?</string>
    <string name="prompt_account_name">Name</string>
    <string name="prompt_account_description">Description</string>
    <string name="prompt_share_with">Share with...</string>
    <string name="title_budgets">Budgets</string>
    <string name="prompt_budget">Budget</string>
    <string name="title_add_budget">Add Budget</string>
    <string name="title_edit_budget">Edit Budget</string>
    <string name="title_edit">Edit</string>
    <string name="description_logo">Twigs Logo</string>
    <string name="action_filter">Filter</string>
    <string name="action_cancel">Cancel</string>
    <string name="prompt_month">Month</string>
    <string name="prompt_year">Year</string>
    <string name="archived">Archived</string>
    <string name="title_overview">Overview</string>
    <string name="label_total">Total</string>
    <string name="label_balance">Balance</string>
    <string name="label_remaining">Remaining</string>
    <string name="prompt_server">Server</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
</resources>
