<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/categoryForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_edit_category_name"
                style="@style/AppTheme.EditText.Container"
                android:hint="@string/prompt_category_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_category_name"
                    style="@style/AppTheme.EditText"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_edit_category_description"
                style="@style/AppTheme.EditText.Container"
                android:hint="@string/prompt_category_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_category_description"
                    style="@style/AppTheme.EditText"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_edit_category_amount"
                style="@style/AppTheme.EditText.Container"
                android:hint="@string/prompt_category_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_category_amount"
                    style="@style/AppTheme.EditText"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/categoryExpenseContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/type_expense" />

                <RadioButton
                    android:id="@+id/income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_income" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/archived"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/archived" />

            <TextView
                android:id="@+id/budgetHint"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_budget" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/budgetSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
