<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_edit_transaction_title"
                style="@style/AppTheme.EditText.Container"
                android:hint="@string/prompt_transaction_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_transaction_title"
                    style="@style/AppTheme.EditText"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_edit_transaction_description"
                style="@style/AppTheme.EditText.Container"
                android:hint="@string/prompt_transaction_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_edit_transaction_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_transaction_description"
                    style="@style/AppTheme.EditText"
                    android:inputType="textCapSentences|textMultiLine"
                    android:scrollHorizontally="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_edit_transaction_amount"
                style="@style/AppTheme.EditText.Container"
                android:hint="@string/prompt_transaction_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_edit_transaction_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_transaction_amount"
                    style="@style/AppTheme.EditText"
                    android:inputType="numberDecimal"
                    android:scrollHorizontally="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/container_edit_transaction_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/container_edit_transaction_amount">
                <RadioButton
                    android:id="@+id/edit_transaction_type_expense"
                    android:text="@string/type_expense"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/edit_transaction_type_income"
                    android:text="@string/type_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <TextView
                android:id="@+id/container_edit_transaction_date"
                style="@style/AppTheme.EditText.Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/prompt_transaction_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_edit_transaction_type" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/transactionDate"
                tools:text="9/23/2019"
                android:padding="8dp"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/transactionTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_edit_transaction_date" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/transactionTime"
                android:padding="8dp"
                android:textColor="@color/colorTextPrimary"
                tools:text="10:23 pm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/transactionDate"
                app:layout_constraintTop_toBottomOf="@+id/container_edit_transaction_date" />

            <TextView
                android:id="@+id/budgetHint"
                style="@style/AppTheme.EditText.Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/prompt_budget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transactionDate" />

            <Spinner
                android:id="@+id/budgetSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/budgetHint" />

            <TextView
                android:id="@+id/container_edit_transaction_category"
                style="@style/AppTheme.EditText.Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/prompt_transaction_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/budgetSpinner" />

            <Spinner
                android:id="@+id/edit_transaction_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_edit_transaction_category" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
