<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true"
    android:padding="16dp"
    tools:context=".ui.budgets.AddEditBudgetFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/budgetForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionContainer"
                style="@style/AppTheme.EditText.Container"
                android:hint="@string/prompt_account_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    style="@style/AppTheme.EditText"
                    android:inputType="textMultiLine|textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameContainer"
                style="@style/AppTheme.EditText.Container"
                android:hint="@string/prompt_account_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    style="@style/AppTheme.EditText"
                    android:inputType="text|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <AutoCompleteTextView
                android:id="@+id/usersSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_share_with"
                app:layout_constraintTop_toBottomOf="@+id/descriptionContainer" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/usersContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/usersSearch" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>
</ScrollView>